popup z-index fix

--- a/frontend/src/Components/Popup/Popup.css
+++ b/frontend/src/Components/Popup/Popup.css
@@ -12,6 +12,7 @@
     visibility: hidden;
     top: -100%;
     transition: all .5s;
+    z-index: 9;
 }
 
 .popup_overlay.open {
